@startuml class_diagram

class Otrio {
    - gameManager: GameManager
    - players: std::vector<Player>

    + run()
}

class GameManager {
    - board: Board
    - players: std::array<Player*, 4>
    - round_count: int

    - playRound(): void
    - isLastRound(): bool
    - checkWinConditions(frame_played: Frame): bool
    - checkWinCondition1(frame_played: Frame): bool
    - checkWinCondition2(frame_played: Frame): bool
    - checkWinCondition3(frame_played: Frame): bool
    - ...()

    + GameManager(players: std::array<Player *, 4>)
    + startGame()
}

class Board {
    - frames: std::array<std::array<Frame, 3>, 3>
    + toString()
}

class Frame {
    - smallCircle: Circle*
    - mediumCircle: Circle*
    - largeCircle: Circle*

    + getCircle(size: CircleSize): Circle*
    + tryToPlace(circle: Circle): bool
    + toString(): std::string
}

class Circle {
    - size: CircleSize
    - color: CircleColor

    + getSize(): CircleSize
    + getColor(): CircleColor
}

class Player {
    - color: CircleColor
    - name: std::string
    - nbSmallCircles: int
    - nbMediumCircles: int
    - nbLargeCircles: int

    + Player(CircleColor color, std::string name)
    + placeCircle(gameManager: GameManager&): void
    + getColor(): CircleColor
    + getName(): std::string
}

class PlayerBot extends Player {
    + placeCircle(gameManager: GameManager&): void
}

enum CircleSize {
    SMALL
    MEDIUM
    LARGE
}

enum CircleColor {
    RED
    GREEN
    BLUE
    BLACK
}

Otrio "1" *-- "1" GameManager
GameManager "1" *-- "1" Board
Board "1" *-- "9" Frame
Circle -- CircleSize
Circle -- CircleColor
Player -- CircleColor
Otrio "1" *-- "4" Player
GameManager "1" *.. "4" Player

Frame "1" *-- "3" Circle
Player "1" *-- "3" Circle


@enduml